<resources>
    <string name="app_name">Tasks</string>
    <string name="app_long_name">Custom App: Tasks</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_all">All</string>
    <string name="menu_today">Today</string>
    <string name="menu_tomorrow">Tomorrow</string>

    <string name="menu_starred">Starred</string>
    <string name="menu_completed">Completed</string>
    <string name="menu_wont_do">Won\'t do</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check">Check</string>
    <string name="name">Name</string>
    <string name="star">Star</string>
    <string name="list">List</string>
    <string name="due">Due</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="plan_task">Plan task</string>
    <string name="remind_me">Remind me</string>
    <string name="description">Description</string>
    <string name="set_due_date">Set due date</string>
    <string name="no_due_date">No due date</string>
    <string name="not_planned">Not planned</string>
    <string name="add_reminders">Add reminders</string>
    <string name="add_description">Add description…</string>
    <string name="plan_this_task">Plan this task</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_upcoming">Upcoming</string>
    <string name="menu_planned">Planned</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_lists">Lists</string>
    <string name="add_list">Add list</string>
    <string name="menu_unlisted">Unlisted</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="delete_list">Delete list</string>
    <string name="edit_list">Edit list</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="more">More...</string>
    <string name="reminders_notification_channel_id">reminders_notification_channel_id</string>
    <string name="menu_all_tasks">All tasks</string>
    <string name="sort_by">Sort by</string>
    <string name="due_date">Due date</string>
    <string name="plan">Planned</string>
    <string name="show_completed">Show Completed</string>
    <string name="show_wont_do">Show Won\'t do</string>
    <string name="planned">Planned</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="hide_wont_do">Hide Won\'t do</string>
    <string name="hide_completed">Hide Completed</string>
    <string name="clear_sorting_rules">Clear sorting rules</string>
    <string name="checked_time">Checked time</string>
    <string name="modified_time">Modified time</string>
    <string name="created_time">Created time</string>
    <string name="add_estimation">Add estimation</string>
    <string name="estimate_this_task">Estimate this task</string>
    <string name="estimate">Estimate</string>
    <string name="est_duration">Est. duration</string>
    <string name="nearest">Nearest</string>
    <string name="furthest">Furthest</string>
    <string name="shortest">Shortest</string>
    <string name="longest">Longest</string>
    <string name="furthest_to_most_recently">Furthest to most recently</string>
    <string name="oldest_to_most_recent">Oldest to most recent</string>
    <string name="newest_to_oldest">Newest to oldest</string>
    <string name="oldest_to_newest">Oldest to newest</string>

</resources>