<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:windowIsFloating="false"
    android:windowSoftInputMode="adjustResize"
    tools:context=".ui.edittext.EditTextFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/cancelIcon"
            android:layout_width="30dp"

            android:layout_height="match_parent"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/check"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <EditText
            android:id="@+id/nameView"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            android:background="@null"
            android:hint="@string/name"

            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"

            android:textSize="16sp"
            android:textColor="@color/main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/saveIcon"
            app:layout_constraintStart_toEndOf="@+id/cancelIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/saveIcon"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/star"
            app:srcCompat="@drawable/ic_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/descriptionView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@null"
        android:gravity="start|top"
        android:hint="@string/add_description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/main"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout1" />

</androidx.constraintlayout.widget.ConstraintLayout>